--- a/discovery_server/src/main/resources/application.yml
+++ b/discovery_server/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: discovery-service
 server:
-  port: 9110
+  port: 9201
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9100/eureka/
+      defaultZone: http://peer1:9101/eureka/,http://peer2:9102/eureka/
