--- a/zuul_server/src/main/resources/application.yml
+++ b/zuul_server/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
  application:
   name: zuul-server
 server:
-  port: 9150
+  port: 9401
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9100/eureka/
+      defaultZone: http://peer1:9101/eureka/,http://peer2:9102/eureka/
 zuul:
   routes:
     api-a:
