--- a/config_server/src/main/resources/application.yml
+++ b/config_server/src/main/resources/application.yml
@@ -12,6 +12,16 @@ spring:
   profiles:
     active: native
 
+  rabbitmq:
+    host: chuchen
+    port: 5672
+    username: chuchen
+    password: chuchen
+
 server:
   port: 9501
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:9101/eureka/,http://peer2:9102/eureka/
